--- a/package.json
+++ b/package.json
@@ -5,23 +5,31 @@
   "dependencies": {
     "@material-ui/core": "^4.6.1",
     "@material-ui/icons": "^4.5.1",
+    "@types/node": "^14.14.22",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "^5.1.7",
+    "connected-react-router": "^6.8.0",
     "graphql": "^14.5.8",
     "isomorphic-fetch": "^2.2.1",
+    "pondjs": "^0.8.10",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.2.0",
+    "react-select": "^4.0.2",
+    "react-timeseries-charts": "^0.16.1",
     "react-toastify": "^5.4.0",
     "react-use": "^13.6.3",
     "rebound": "^0.1.0",
-    "redux": "^4.0.4",
+    "redux": "^4.0.5",
     "redux-saga": "^1.1.1",
-    "redux-starter-kit": "^1.0.1",
+    "redux-starter-kit": "1.0.1",
+    "subscriptions-transport-ws": "^0.9.18",
     "typescript": "^3.7.2",
-    "urql": "^1.6.3"
+    "urql": "1.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
